lab1/Test/L1-A-8-74.cmm
int C , es4O4LYJvQt 

;
int pTT5rwbsyCT ( ) {
  if ( a6toyR3aNWLIOVRsM )   while ( BLYWrS7 )   while 
    ( fpNpvHYlt ) {
{
      JUCPJ ;
      AG8 ;
      RXSF77v25Gygn ;
{
        int AgzBK6EjgEf8mBJrc ;
        struct return {
        }EU3o1A7EOd ;
      }wodV2Gmske5pDx     }  }

else   if ( _SkeHRk65DK1kIDLN )   while ( yRxOKUgQXGOf23e 
    )   LjuK_hvxCNbgZwTE ;



  if ( hcnFw jiiBy7hb2EHX )   while ( wZ666IUyTz1chg 
    )   if ( nKZgW )   ml310KX7EqlOt_QULkE ;
else {
  }


  return nTpROnz7Y3Eg3y4il8v ;
}
struct  L7kHn1T ;
int uQvZuBRdGg_Sgl 
;
struct Kxll LYDYpW ( float A , struct QsqzZZvMaAf19iPSXvP 
  {
}FT93xJv1 ) {
  int xz7wdT_OPFv [ 384944930 O ] , Z8SU6YuwczSbJjgjy 
    = mR && S_DzKX3XyT < rJcRscq8gnF7Q - EkZMTwwc77z / 
    ! vI9QKyIcKEvAcRQb ( yipBLYIUHGLhxn , y6LTl2wkEz1DQ 
    = _HyoGqz7sMzg || NRFXxKN8_BV0SY8j <= jrvL * z1hiwsjs0w0hoG 
    [ M6Ae || ufZ != SoY8BEfjd9bdfC4f73v - OLzQs ( h0dKk_vWb 
    && MH_sTHk_mPcms_iTU >= ( vT = lzscfVb7vkgjPXe || 
    xYD4VZ4x == eWBG8uNfHe > 1240460432 . P_ ) . KxL6j3o 
    || lYgqeB3kN02dv0xpp . Wm7TBF8w6Bbc6TH ) . Aa21et 
    / - 456833924.1485840431 ] ) . nSIbwqFPufBY4RJIBEB 
    + - XveLZE0sYOV ( ) ;
}
